--- a/FrontEnd/src/app/overview/overview.component.html
+++ b/FrontEnd/src/app/overview/overview.component.html
@@ -35,12 +35,11 @@
       <label for="gender">Gender</label>
       <input type="text" name="gender" placeholder="Your Gender.." maxlength="1" ngModel>
       <label for="lContact">Last Contact</label>
-      <input type="datetime-local"  name="lastContact"  (ngModelChange)="newCustomer.lastContact = $event"  placeholder="Your last Contact.." ngModel>
+      <input type="datetime-local"  name="lastContact"  placeholder="Your last Contact.." ngModel>
       <br><label for="customerLifetimeValue">Life Time Value</label>
       <input type="text" name="customerLifetimeValue"   placeholder="Your life time value.." ngModel>
       <button type="submit">
-        Add Customer
-      </button>
+        Add Customer </button>
     </form>
 </div>
 </div>
